Xwayland/EGLstream remaining visual glitches
Even with !646 (merged), there are remaining visual glitches.
Initially, I reckoned that was a bug in Xwayland or in glamor, but I am not so sure now.
It all seems to behave as if there was multiple buffers involved and not all of them where successfully and consistently kept up-to-date.
Actually, it looks like double triple? buffering gone wrong to me (this is entirely empirical of course).
To reproduce:
- In xterm, open the menu (Ctrl+LMB)
- Navigate the menu
- Sometimes some past content show a few entries before the currently selected one
Alternate method:
- Resize xterm (or any other X11 window).
- Sometimes the whole window becomes black
- Typing in the window shows the different buffers.
I tried to capture a video of the issue:
(quality is low because I tried to keep the file small)
We can see what looks like different buffers being updated as the cursor moved over the window - One of those buffers is fully updated, the other one has the character "a" typed and the rest is just black.
This is with GNOME Shell.